--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,14 @@
 ###< symfony/documentation ###
 /documentation.txt
 ###< symfony/documentation ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
